# Scythe-Context-Engine

./: .gitignore  README.md  cache.py  config.py  context_cache.db  create_config.py  debug_reader.py  index_repo.py  mcp_server.py  openrouter_client.py  pyproject.toml  query_context.py  requirements.txt
config/: config.py  create_config.py
indexer/: ast_parser.py  chunk_storage.py  embedder.py  file_processor.py  models.py  summarizer.py
mcp_server/: README.md  server.py
query_context/: __init__.py  cache.py  cli.py  models.py  query.py  refinement.py  rendering.py  reranking.py
test_index/full_chunks/: 07dd01f0ce17fcf9.py  08055de2ded16380.py  089324b200db18af.py  08aa8c33b71275ec.py  0c144370ee032ce7.py  140d899537b3770b.py  19291d7fe2b413bc.py  1d587f8d01dc4327.py  1e3cd53b685d7306.py  1f439a1a1752b5e7.py  23ef440eeb006179.py  26cef4db11a198a2.py  2966cfcbc6e26b58.py  298b44439c3d7da5.py  300f1e5e6adc488b.py  320f8b19ec288346.py  36f9d0e957a11328.py  3e59b782c85cd1c6.py  4026ffe02c904860.py  436b5bbe70f53b0a.py  451acf5afdd2228f.py  457fa3d4c6ed902e.py  486de7620fec0968.py  4d034b132d197f44.py  4eb704036e020603.py  5041e3635bdbd7e7.py  50f29a41be70b0f7.py  55298ecd7d8e81f8.py  5c998ff03815a3f1.py  5ebf5c155bf8bf05.py  645683e52e1dc497.py  64ea98bf157cf115.py  65ed8040646d6d71.py  66a116a94657c5cf.py  6a5a20d89974cc74.py  6a6777f4409879e1.py  7b4ec530a98db27b.py  81512358c64b5ae9.py  8b016ebaa89b365a.py  8b7642c7fb83c651.py  (+38 more)
