[project]
name = "scythe-context-engine"
version = "0.1.0"
description = "A context engine for code analysis and retrieval"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "ollama>=0.2.0",
    "tqdm>=4.65.0",
    "line-profiler>=4.0.0",
    "einops",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "mcp>=1.25.0",
    "tiktoken>=0.5.0",
]
requires-python = ">=3.10"